# diffuse

./: .eslintrc.yaml  .gitignore  .tool-versions  CHANGELOG.md  Compatibility.md  Development_guide.md  Justfile  LICENSE  Makefile  README.md  elm-package.json  elm.json  flake.nix  gren.json  ongaku-ryoho.cabal  package-lock.json  package.json  package.yaml  pnpm-lock.yaml  shell.nix  stack.yaml  tmp.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  native-build.yml  native.yml
docs/: Compatibility.md  Development Guide.md
electron/: builder.yaml  index.js  server.js
nix/: shell.nix  sources.json  stack-integration.nix
src/: README.md  elm-loader.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/App/: App.elm  DnD.elm  Extraterrestrial.elm  Layouts.elm  Main.elm  Notifications.elm  Ports.elm  State.elm  Styles.elm  Types.elm  Utils.elm  Variables.elm  View.elm
src/App/Abroad/: Ports.elm  State.elm  Types.elm  View.elm
src/App/Alfred/: State.elm  System.elm  Types.elm  View.elm
src/App/Authentication/: Demo.elm  Events.elm  Method.elm  Ports.elm  State.elm  Transformers.elm  Translations.elm  Types.elm  UserData.elm
src/App/BackgroundImage/: State.elm  Styles.elm  Types.elm  View.elm
src/App/Console/: Ports.elm  State.elm  Types.elm  Utils.elm  View.elm
src/App/ContextMenu/: State.elm  Types.elm  View.elm
src/App/Dict/: Ext.elm
src/App/Element/: Ext.elm  Types.elm
src/App/Equalizer/: Ports.elm  State.elm  Touch.elm  Types.elm  View.elm
src/App/Firebase/: Auth.elm  Data.elm
src/App/HorizontalNavigation/: View.elm
src/App/List/: Ext.elm
src/App/Maybe/: Ext.elm  Extensions.elm
src/App/Navigation/: Types.elm  View.elm
src/App/Notifications/: Config.elm  Types.elm  View.elm
src/App/Playlists/: Alfred.elm  AutoGenerate.elm  ContextMenu.elm  Encoding.elm  State.elm  Types.elm  Utils.elm  View.elm
src/App/Queue/: Fill.elm  Ports.elm  State.elm  Types.elm  Utils.elm  View.elm
src/App/Response/: Ext.elm
src/App/Routing/: Logic.elm  State.elm  Transitions.elm  Types.elm  Utils.elm
src/App/Settings/: Ports.elm  State.elm  Types.elm  View.elm
src/App/Sources/: ContextMenu.elm  Encoding.elm  Pick.elm  Ports.elm  Processing.elm  Services.elm  State.elm  Types.elm  Utils.elm  View.elm
src/App/Spinner/: Styles.elm  Variables.elm  View.elm
src/App/Svg/: Elements.elm
src/App/Tracks/: Collection.elm  ContextMenu.elm  Encoding.elm  Favourites.elm  Ports.elm  Selecting.elm  Sorting.elm  State.elm  Types.elm  Utils.elm  View.elm
src/App/Users/: Auth.elm  Data.elm  Ports.elm  Types.elm
src/Applications/: Brain.elm  UI.elm
src/Applications/Brain/: Authentication.elm  Core.elm  Ports.elm  Reply.elm  Tracks.elm  Types.elm
src/Applications/UI/: Adjunct.elm  Alfred.elm  Alien.elm  Animations.elm  Authentication.elm  Backdrop.elm  Chunky.elm  Console.elm  ContextMenu.elm  Core.elm  Css.elm  Demo.elm  DnD.elm  Equalizer.elm  Kit.elm  List.elm  Navigation.elm  Notifications.elm  Page.elm  Playlists.elm  Ports.elm  Queue.elm  (+7 more)
src/Core/: UI.elm
src/Css/: About.css  Application.css  Equalizer.css  Fonts.css  Logo.css  Notifications.css  Styles.elm  StylesOld.elm  Stylesheets.elm  Traits.elm  Variables.elm  Variations.elm  index.css
src/Javascript/: audio-engine.js  audio-engine.ts  common.js  common.ts  crypto.js  crypto.ts  encryption.js  index.d.ts  index.js  index.ts  indexed-db.js  processing.js  processing.ts  rubber-band.js  textile.js  urls.js
src/Js/: audio-engine.js  authentication.js  browser-support.js  elm-loader.js  processing.js  search.js
src/Lib/: DnD.elm
src/Slave/: Slave.elm
src/Static/: manifest.json  webnative-elm.js
src/Styles/: Styles.elm  StylesOld.elm  Variables.elm  Variations.elm
system/: Main.hs  Server.hs  Stylesheets.elm  Vendor.hs
system/Css/: PostCSS.js  Tailwind.js  postcss.config.js  purge.about.js  purge.application.js  purgecss.about.js  purgecss.application.js  purgecss.config.js
system/Js/: esbuild.mjs  node-shims.js
system/Review/: ReviewConfig.elm  elm.json
system/Server/: Main.hs
tests/: elm-doc-test.json  elm-package.json
(+328 files in other folders)
