name: ongaku-ryoho
version: 1.0.0

build-type: Simple
cabal-version: >= 1.10


executable build
    default-language:
        Haskell2010

    default-extensions:
        ExtendedDefaultRules
        OverloadedStrings

    hs-source-dirs:
        system

    main-is:
        Main.hs

    build-depends:
        base,
        directory == 1.3.*,
        flow == 1.*,
        shikensu == 0.3.*,
        text == 1.*

    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N


executable server
    default-language:
        Haskell2010

    default-extensions:
        OverloadedStrings

    hs-source-dirs:
        system

    main-is:
        Server.hs

    build-depends:
        base,
        binary == 0.8.*,
        directory,
        flow,
        http-types == 0.9.*,
        text,
        wai == 3.2.*,
        wai-app-static == 3.1.*,
        warp == 3.2.*

    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N


executable vendor
    default-language:
        Haskell2010

    default-extensions:
        ExtendedDefaultRules
        OverloadedStrings

    hs-source-dirs:
        system

    main-is:
        Vendor.hs

    build-depends:
        base,
        bytestring == 0.10.*,
        directory == 1.3.*,
        flow == 1.*,
        process == 1.4.*,
        shikensu == 0.3.*,
        text == 1.*

    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
