[package]
name = "diffuse"
version = "3.5.0"
description = "A music player that connects to your cloud/distributed storage"
authors = ["Steven Vandevelde"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["unstable"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-localhost = "2.2.0"
tauri-plugin-positioner = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-window-state = "2.2.1"
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [lib]
# crate-type = ["staticlib", "cdylib", "rlib"]
